--- a/index.html
+++ b/index.html
@@ -4,31 +4,68 @@
     	<meta charset="utf-8"></meta>
         <title>Seek and you shall find</title>
         <style>
+            @keyframes damagedblind {
+                from { color: #BE2633; }
+                to { color: #FFFFFF; }
+            }
+            .damagedblind {
+                animation: 0.5s damagedblind;
+            }
+            @keyframes damagednewpoop {
+                from { color: #BE2633; }
+                to { color: #A46422; }
+            }
+            .damagednewpoop {
+                animation: 0.5s damagednewpoop;
+            }
             body {
-                background: black;
+                background: #1B2632;
+                margin: 0;
             }
             #game {
-                width: 512px;
-                height: 512px;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                white-space: pre;
+                font: 1em Menlo, Monaco, monospace;
+                cursor: default;
             }
-            #canvas {
-                width: 100%;
-                height: 100%;
-                image-rendering: optimizeSpeed;            
-                image-rendering: -moz-crisp-edges;         
-                image-rendering: -o-crisp-edges;           
-                image-rendering: -webkit-optimize-contrast;
-                image-rendering: optimize-contrast;        
-                image-rendering: crisp-edges;              
-                image-rendering: pixelated;                
-                -ms-interpolation-mode: nearest-neighbor; 
+            #game::after {
+                content: "";
+                display: block;
+                clear: both;
+            }
+            #display {
+                color: #FFF;
+                text-align: center;
+                float: left;
+            }
+            #stats {
+                float: left;
+                color: #9D9D9D;
+            }
+            .age0, .age1 {
+                color: white;
+            }
+            .age2 {
+                color: #B2DCEF;
+            }
+            .age3 {
+                color: #31A2F2;
+            }
+            .age4 {
+                color: #005784;
+            }
+            .pointer {
+                cursor: pointer;
             }
         </style>
     </head>
     <body>
-        <div id="game">
-            <canvas id="canvas" width="480" height="480"></canvas>
-        </div>
+        <div id="game"><div id="buffer" class="age0">Press <span id="helpbutton" class="pointer">[?]</span> for help.</div><div id="display"></div><div id="stats">Health: 12/12</div></div>
         <script src="rlt.js"></script>
         <script src="script.js"></script>
     </body>
